# MASeval

./: .gitignore  LANGFUSE_API_REFERENCE.md  LANGFUSE_SETUP.md  LICENSE  README.md  TRACE_GROUPING.md  agent_step_metrics.md  pyproject.toml
data/non_llm_weight_ablation_algo_gemini/: non_llm_weight_ablation_summary.md
data/non_llm_weight_ablation_hand_gemini/: non_llm_weight_ablation_summary.md
examples/: RUN_COSTS.md  annotate_errors.py  download_traces.py  evaluate_annotations.py  fix_nested_json_strings.py  review_app.py
examples/aegis/: calculate.py  gen_validators_confirm.py  launch_aegis.py  score_aegis.py  score_none_plus_validators.py  verifier_ablation.py
examples/agentrx/: README.md  agentrx_data.py  backfill_final_answer.py  build_agent_step_accuracy_report.py  calculate_agent_step_accuracy.py  launch_findings_judges.py
examples/ghost_launch/: calculate_metrics.py  calculate_metrics_web_arena.py  download_traces.py  example_usage_langgraph_parser.py  launch_all_llm_metrics.py  launch_all_llm_metrics_webarena.py  launch_best_ensemble_judges.py  launch_best_ensemble_judges_for_balanced_traces.py  launch_ghost_openrouter_one_mas.py  launch_single_judge.py
examples/mast/: exp_MAST_trace_launch.py  exp_calc_metrics_MAST.py  mad_trace_launch.py
examples/trace_elephant/: README.md  gen_validators_confirm.py  (+6 more)
test_results/: validation_results_0e6f7928953ab5a568bae640ce915cc3.json  validation_results_1d83cd44e64e212cee17f5e26650562e.json  validation_results_2.json  validation_results_3.json  validation_results_7.json
tests/: test_evidence_verifier.py
(+89 files in other folders)
