[project]
name = "maseval-research"
version = "0.1.0"
description = "Library for automated multi-agent evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-ai>=2.0.0",
    "python-dotenv>=1.1.1",
    "langfuse==3.14.4",
    "deepeval>=3.6.7",
    "ftfy>=6.3.1",
    "langchain_core>=0.3.76",
    "langchain_gigachat>=0.3.12",
    "pandas>=2.3.2",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "dotenv>=0.9.9",
    "pytest",
    "pytest-asyncio",
    "tenacity"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maseval"]
